# wappalyzer

./: .gitignore  Cargo.toml  apps.json  build.rs  readme.md  schema.json
src/: lib.rs  main.rs  wapp.rs
